--- a/xv6-pdx/Makefile
+++ b/xv6-pdx/Makefile
@@ -1,8 +1,7 @@
 # Set flag to correct CS333 project number: 1, 2, ...
 # 0 == original xv6-pdx distribution functionality
-#point 1 dan 2
-CS333_PROJECT ?= 1
-PRINT_SYSCALLS ?= 1
+CS333_PROJECT ?= 2
+PRINT_SYSCALLS ?= 0
 CS333_CFLAGS ?= -DPDX_XV6
 ifeq ($(CS333_CFLAGS), -DPDX_XV6)
 CS333_UPROGS +=	_halt _uptime
@@ -14,13 +13,12 @@ endif
 
 ifeq ($(CS333_PROJECT), 1)
 CS333_CFLAGS += -DCS333_P1
-#nyalakan _date
 CS333_UPROGS += _date
 endif
 
 ifeq ($(CS333_PROJECT), 2)
 CS333_CFLAGS += -DCS333_P1 -DUSE_BUILTINS -DCS333_P2
-CS333_UPROGS += _date _time _ps
+CS333_UPROGS += _date _ps _time
 CS333_TPROGS += _testsetuid  _testuidgid _p2-test
 endif
 
